proyecto/CompiscriptParser.py
# Generated from Compiscript.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CompiscriptParser ( Parser ):

    grammarFileName = "Compiscript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'in'", "'const'", "'let'", "'var'", "'function'", 
                     "'class'", "'print'", "'if'", "'else'", "'while'", 
                     "'do'", "'for'", "'foreach'", "'break'", "'continue'", 
                     "'return'", "'try'", "'catch'", "'switch'", "'case'", 
                     "'default'", "'new'", "'this'", "'null'", "'true'", 
                     "'false'", "'boolean'", "'integer'", "'string'", "'='", 
                     "':'", "';'", "','", "'.'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "'?'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'&&'", "'||'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "CONST", "LET", "VAR", "FUNCTION", 
                      "CLASS", "PRINT", "IF", "ELSE", "WHILE", "DO", "FOR", 
                      "FOREACH", "BREAK", "CONTINUE", "RETURN", "TRY", "CATCH", 
                      "SWITCH", "CASE", "DEFAULT", "NEW", "THIS", "NULL", 
                      "TRUE", "FALSE", "BOOLEAN", "INTEGER", "STRING", "ASSIGN", 
                      "COLON", "SEMICOLON", "COMMA", "DOT", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "QUESTION", 
                      "PLUS", "MINUS", "MULT", "DIV", "MOD", "NOT", "EQ", 
                      "NEQ", "LT", "LE", "GT", "GE", "AND", "OR", "Literal", 
                      "IntegerLiteral", "StringLiteral", "Identifier", "WS", 
                      "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_variableDeclaration = 3
    RULE_constantDeclaration = 4
    RULE_typeAnnotation = 5
    RULE_initializer = 6
    RULE_assignment = 7
    RULE_expressionStatement = 8
    RULE_printStatement = 9
    RULE_ifStatement = 10
    RULE_whileStatement = 11
    RULE_doWhileStatement = 12
    RULE_forStatement = 13
    RULE_foreachStatement = 14
    RULE_breakStatement = 15
    RULE_continueStatement = 16
    RULE_returnStatement = 17
    RULE_tryCatchStatement = 18
    RULE_switchStatement = 19
    RULE_switchCase = 20
    RULE_defaultCase = 21
    RULE_functionDeclaration = 22
    RULE_parameters = 23
    RULE_parameter = 24
    RULE_classDeclaration = 25
    RULE_classMember = 26
    RULE_expression = 27
    RULE_assignmentExpr = 28
    RULE_conditionalExpr = 29
    RULE_logicalOrExpr = 30
    RULE_logicalAndExpr = 31
    RULE_equalityExpr = 32
    RULE_relationalExpr = 33
    RULE_additiveExpr = 34
    RULE_multiplicativeExpr = 35
    RULE_unaryExpr = 36
    RULE_primaryExpr = 37
    RULE_literalExpr = 38
    RULE_leftHandSide = 39
    RULE_primaryAtom = 40
    RULE_suffixOp = 41
    RULE_arguments = 42
    RULE_arrayLiteral = 43
    RULE_type = 44
    RULE_baseType = 45

    ruleNames =  [ "program", "statement", "block", "variableDeclaration", 
                   "constantDeclaration", "typeAnnotation", "initializer", 
                   "assignment", "expressionStatement", "printStatement", 
                   "ifStatement", "whileStatement", "doWhileStatement", 
                   "forStatement", "foreachStatement", "breakStatement", 
                   "continueStatement", "returnStatement", "tryCatchStatement", 
                   "switchStatement", "switchCase", "defaultCase", "functionDeclaration", 
                   "parameters", "parameter", "classDeclaration", "classMember", 
                   "expression", "assignmentExpr", "conditionalExpr", "logicalOrExpr", 
                   "logicalAndExpr", "equalityExpr", "relationalExpr", "additiveExpr", 
                   "multiplicativeExpr", "unaryExpr", "primaryExpr", "literalExpr", 
                   "leftHandSide", "primaryAtom", "suffixOp", "arguments", 
                   "arrayLiteral", "type", "baseType" ]

    EOF = Token.EOF
    T__0=1
    CONST=2
    LET=3
    VAR=4
    FUNCTION=5
    CLASS=6
    PRINT=7
    IF=8
    ELSE=9
    WHILE=10
    DO=11
    FOR=12
    FOREACH=13
    BREAK=14
    CONTINUE=15
    RETURN=16
    TRY=17
    CATCH=18
    SWITCH=19
    CASE=20
    DEFAULT=21
    NEW=22
    THIS=23
    NULL=24
    TRUE=25
    FALSE=26
    BOOLEAN=27
    INTEGER=28
    STRING=29
    ASSIGN=30
    COLON=31
    SEMICOLON=32
    COMMA=33
    DOT=34
    LPAREN=35
    RPAREN=36
    LBRACE=37
    RBRACE=38
    LBRACK=39
    RBRACK=40
    QUESTION=41
    PLUS=42
    MINUS=43
    MULT=44
    DIV=45
    MOD=46
    NOT=47
    EQ=48
    NEQ=49
    LT=50
    LE=51
    GT=52
    GE=53
    AND=54
    OR=55
    Literal=56
    IntegerLiteral=57
    StringLiteral=58
    Identifier=59
    WS=60
    LINE_COMMENT=61
    BLOCK_COMMENT=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CompiscriptParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiscriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(CompiscriptParser.StatementContext,i)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CompiscriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 648668601608044028) != 0):
                self.state = 92
                self.statement()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(CompiscriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(CompiscriptParser.VariableDeclarationContext,0)


        def constantDeclaration(self):
            return self.getTypedRuleContext(CompiscriptParser.ConstantDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(CompiscriptParser.AssignmentContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(CompiscriptParser.FunctionDeclarationContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(CompiscriptParser.ClassDeclarationContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.PrintStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(CompiscriptParser.BlockContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.WhileStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.DoWhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ForStatementContext,0)


        def foreachStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ForeachStatementContext,0)


        def tryCatchStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.TryCatchStatementContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.SwitchStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ContinueStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CompiscriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.constantDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.assignment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.functionDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.classDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 105
                self.expressionStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 106
                self.printStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 107
                self.block()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 108
                self.ifStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 109
                self.whileStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 110
                self.doWhileStatement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 111
                self.forStatement()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 112
                self.foreachStatement()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 113
                self.tryCatchStatement()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 114
                self.switchStatement()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 115
                self.breakStatement()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 116
                self.continueStatement()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 117
                self.returnStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CompiscriptParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CompiscriptParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiscriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(CompiscriptParser.StatementContext,i)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = CompiscriptParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(CompiscriptParser.LBRACE)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 648668601608044028) != 0):
                self.state = 121
                self.statement()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(CompiscriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CompiscriptParser.Identifier, 0)

        def SEMICOLON(self):
            return self.getToken(CompiscriptParser.SEMICOLON, 0)

        def LET(self):
            return self.getToken(CompiscriptParser.LET, 0)

        def VAR(self):
            return self.getToken(CompiscriptParser.VAR, 0)

        def typeAnnotation(self):
            return self.getTypedRuleContext(CompiscriptParser.TypeAnnotationContext,0)


        def initializer(self):
            return self.getTypedRuleContext(CompiscriptParser.InitializerContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_variableDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = CompiscriptParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 130
            self.match(CompiscriptParser.Identifier)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 131
                self.typeAnnotation()


            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 134
                self.initializer()


            self.state = 137
            self.match(CompiscriptParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(CompiscriptParser.CONST, 0)

        def Identifier(self):
            return self.getToken(CompiscriptParser.Identifier, 0)

        def ASSIGN(self):
            return self.getToken(CompiscriptParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(CompiscriptParser.SEMICOLON, 0)

        def typeAnnotation(self):
            return self.getTypedRuleContext(CompiscriptParser.TypeAnnotationContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_constantDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantDeclaration" ):
                return visitor.visitConstantDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def constantDeclaration(self):

        localctx = CompiscriptParser.ConstantDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constantDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(CompiscriptParser.CONST)
            self.state = 140
            self.match(CompiscriptParser.Identifier)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 141
                self.typeAnnotation()


            self.state = 144
            self.match(CompiscriptParser.ASSIGN)
            self.state = 145
            self.expression()
            self.state = 146
            self.match(CompiscriptParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeAnnotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(CompiscriptParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(CompiscriptParser.TypeContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_typeAnnotation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeAnnotation" ):
                return visitor.visitTypeAnnotation(self)
            else:
                return visitor.visitChildren(self)




    def typeAnnotation(self):

        localctx = CompiscriptParser.TypeAnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typeAnnotation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(CompiscriptParser.COLON)
            self.state = 149
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(CompiscriptParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_initializer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitializer" ):
                return visitor.visitInitializer(self)
            else:
                return visitor.visitChildren(self)




    def initializer(self):

        localctx = CompiscriptParser.InitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_initializer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(CompiscriptParser.ASSIGN)
            self.state = 152
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CompiscriptParser.Identifier, 0)

        def ASSIGN(self):
            return self.getToken(CompiscriptParser.ASSIGN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiscriptParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,i)


        def SEMICOLON(self):
            return self.getToken(CompiscriptParser.SEMICOLON, 0)

        def DOT(self):
            return self.getToken(CompiscriptParser.DOT, 0)

        def getRuleIndex(self):
            return CompiscriptParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = CompiscriptParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(CompiscriptParser.Identifier)
                self.state = 155
                self.match(CompiscriptParser.ASSIGN)
                self.state = 156
                self.expression()
                self.state = 157
                self.match(CompiscriptParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.expression()
                self.state = 160
                self.match(CompiscriptParser.DOT)
                self.state = 161
                self.match(CompiscriptParser.Identifier)
                self.state = 162
                self.match(CompiscriptParser.ASSIGN)
                self.state = 163
                self.expression()
                self.state = 164
                self.match(CompiscriptParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(CompiscriptParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CompiscriptParser.RULE_expressionStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)




    def expressionStatement(self):

        localctx = CompiscriptParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.expression()
            self.state = 169
            self.match(CompiscriptParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(CompiscriptParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(CompiscriptParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(CompiscriptParser.RPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(CompiscriptParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CompiscriptParser.RULE_printStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)




    def printStatement(self):

        localctx = CompiscriptParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(CompiscriptParser.PRINT)
            self.state = 172
            self.match(CompiscriptParser.LPAREN)
            self.state = 173
            self.expression()
            self.state = 174
            self.match(CompiscriptParser.RPAREN)
            self.state = 175
            self.match(CompiscriptParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CompiscriptParser.IF, 0)

        def LPAREN(self):
            return self.getToken(CompiscriptParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(CompiscriptParser.RPAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiscriptParser.BlockContext)
            else:
                return self.getTypedRuleContext(CompiscriptParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(CompiscriptParser.ELSE, 0)

        def getRuleIndex(self):
            return CompiscriptParser.RULE_ifStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = CompiscriptParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(CompiscriptParser.IF)
            self.state = 178
            self.match(CompiscriptParser.LPAREN)
            self.state = 179
            self.expression()
            self.state = 180
            self.match(CompiscriptParser.RPAREN)
            self.state = 181
            self.block()
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 182
                self.match(CompiscriptParser.ELSE)
                self.state = 183
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(CompiscriptParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(CompiscriptParser.LPAREN, 0)
